[tool.poetry]
name = "hrsd-api"
version = "0.1.0"
description = ""
authors = ["dolshevsk <olshevskiydk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
asyncpg = "^0.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
